@@ -38,21 +38,26 @@ set ld_library_path $always_ld_library_path
 append ld_library_path [gcc-set-multilib-library-path $GCC_UNDER_TEST]
 set_ld_library_path_env_vars
 
-# Test with available OpenACC device types.
+# Test with all available offload targets, and with offloading disabled.
 set SAVE_ALWAYS_CFLAGS "$ALWAYS_CFLAGS"
-global openacc_device_type
-foreach openacc_device_type $openacc_device_types_s {
+foreach offload_target [concat [split $offload_targets ","] "disable"] {
     set ALWAYS_CFLAGS "$SAVE_ALWAYS_CFLAGS"
+    global openacc_device_type
+    set openacc_device_type [offload_target_to_openacc_device_type $offload_target]
     set tagopt "-DACC_DEVICE_TYPE_$openacc_device_type=1"
 
     switch $openacc_device_type {
+	"" {
+	    unsupported "$subdir $offload_target offloading"
+	    continue
+	}
 	host {
 	    set acc_mem_shared 1
 	}
 	nvidia {
 	    if { ![check_effective_target_openacc_nvidia_accel_present] } {
 		# Don't bother; execution testing is going to FAIL.
-		untested "$subdir $openacc_device_type offloading: supported, but hardware not accessible"
+		untested "$subdir $offload_target offloading: supported, but hardware not accessible"
 		continue
 	    }
 
@@ -65,7 +70,7 @@ foreach openacc_device_type $openacc_device_types_s {
 	    set acc_mem_shared 0
 	}
 	default {
-	    error "Unknown OpenACC device type: $openacc_device_type"
+	    error "Unknown OpenACC device type: $openacc_device_type (offload target: $offload_target)"
 	}
     }
     set tagopt "$tagopt -DACC_MEM_SHARED=$acc_mem_shared"
@@ -79,8 +84,8 @@ foreach openacc_device_type $openacc_device_types_s {
     # -O0 and -O2 only, to avoid testing times exploding too much, under
     # the assumption that between -O0 and -O[something] there is the
     # biggest difference in the overall structure of the generated code.
-    switch $openacc_device_type {
-	host {
+    switch -glob $offload_target {
+	disable {
 	    set-torture-options [list \
 				     { -O2 } ]
 	}
